--- a/hack/ccp/.golangci.yml
+++ b/hack/ccp/.golangci.yml
@@ -8,6 +8,10 @@ linters:
     - gci
     - unparam
     - gosec
+  disable:
+    # There is too much WIP code at the moment.
+    # TODO: enable this ASAP.
+    - unused
 
 issues:
   exclude-dirs:
