Check that `go mod tidy` is clean

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,3 +52,19 @@ jobs:
       - name: Run tests
         run: go test -race ./...
         working-directory: hack/ccp
+  mod:
+    name: Check that `go mod tidy` is clean
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Install Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: hack/ccp/go.mod
+          cache-dependency-path: hack/ccp/go.sum
+      - name: Check
+        run: |
+          go mod tidy
+          git diff --name-only --exit-code || (echo "Please run 'go mod tidy'."; exit 1)
+        working-directory: hack/ccp
