--- a/hack/ccp/buf.gen.yaml
+++ b/hack/ccp/buf.gen.yaml
@@ -3,6 +3,8 @@ managed:
   enabled: true
   go_package_prefix:
     default: github.com/artefactual/archivematica/hack/ccp/internal/api/gen
+    except:
+      - buf.build/bufbuild/protovalidate
 plugins:
   - plugin: buf.build/protocolbuffers/go
     out: internal/api/gen
