--- a/hack/docker-compose.yml
+++ b/hack/docker-compose.yml
@@ -65,6 +65,9 @@ services:
       - "CCP_DB_DRIVER=mysql"
       - "CCP_DB_DSN=root:12345@tcp(mysql:3306)/MCP"
       - "CCP_API_ADMIN_LISTEN=:8000"
+      - "CCP_SSCLIENT_URL=http://archivematica-storage-service:8000"
+      - "CCP_SSCLIENT_USERNAME=test"
+      - "CCP_SSCLIENT_KEY=test"
     volumes:
       - "archivematica_pipeline_data:/var/archivematica/sharedDirectory:rw"
     links:
