--- a/hack/ccp/buf.gen.yaml
+++ b/hack/ccp/buf.gen.yaml
@@ -1,20 +1,22 @@
-version: v1
+version: v2
 managed:
   enabled: true
-  go_package_prefix:
-    default: github.com/artefactual/archivematica/hack/ccp/internal/api/gen
-    except:
-      - buf.build/bufbuild/protovalidate
+  disable:
+    - file_option: go_package
+      module: buf.build/bufbuild/protovalidate
+  override:
+    - file_option: go_package_prefix
+      value: github.com/artefactual/archivematica/hack/ccp/internal/api/gen
 plugins:
-  - plugin: buf.build/protocolbuffers/go
+  - remote: buf.build/protocolbuffers/go
     out: internal/api/gen
     opt: paths=source_relative
-  - plugin: buf.build/connectrpc/go
+  - remote: buf.build/connectrpc/go
     out: internal/api/gen
     opt: paths=source_relative
-  - plugin: buf.build/connectrpc/es
+  - remote: buf.build/connectrpc/es
     out: web/src/gen
     opt: target=ts
-  - plugin: buf.build/bufbuild/es
+  - remote: buf.build/bufbuild/es
     out: web/src/gen
     opt: target=ts
