--- a/hack/docker-compose.yml
+++ b/hack/docker-compose.yml
@@ -58,13 +58,16 @@ services:
       args:
         USER_ID: ${USER_ID:-1000}
         GROUP_ID: ${GROUP_ID:-1000}
-    entrypoint: ["/home/ccp/bin/ccp", "server", "-v=10", "-debug"]
+    entrypoint: ["/home/ccp/bin/ccp", "server"]
     restart: "on-failure"
     environment:
+      - "CCP_DEBUG=true"
+      - "CCP_V=10"
       - "CCP_SHARED_DIR=/var/archivematica/sharedDirectory"
       - "CCP_DB_DRIVER=mysql"
       - "CCP_DB_DSN=root:12345@tcp(mysql:3306)/MCP"
-      - "CCP_API_ADMIN_LISTEN=:8000"
+      - "CCP_API_ADMIN_ADDR=:8000"
+      - "CCP_WEBUI_ADDR=:8001"
       - "CCP_SSCLIENT_URL=http://nginx:8000"
       - "CCP_SSCLIENT_USERNAME=test"
       - "CCP_SSCLIENT_KEY=test"
@@ -74,6 +77,7 @@ services:
       - "mysql"
     ports:
       - "63030:8000"
+      - "63031:8001"
 
   archivematica-mcp-client:
     build:
