--- a/hack/ccp/buf.gen.yaml
+++ b/hack/ccp/buf.gen.yaml
@@ -20,3 +20,7 @@ plugins:
   - remote: buf.build/bufbuild/es
     out: web/src/gen
     opt: target=ts
+  - remote: buf.build/grpc/python
+    out: ../../src/dashboard/src/client/gen
+  - remote: buf.build/protocolbuffers/python
+    out: ../../src/dashboard/src/client/gen
