--- a/ruff.toml
+++ b/ruff.toml
@@ -1,3 +1,7 @@
+exclude = [
+  "src/dashboard/src/client/gen"
+]
+
 [lint]
 # Rule reference: https://docs.astral.sh/ruff/rules/
 select = [
@@ -14,6 +18,7 @@ ignore = [
   "B904",
   "E402",
   "E501",
+  "E731",
   "UP031",
 ]
 
