--- a/hack/etc/prometheus/prometheus.yml
+++ b/hack/etc/prometheus/prometheus.yml
@@ -4,6 +4,6 @@ scrape_configs:
   static_configs:
   - targets:
     - archivematica-mcp-client:7999
-    - archivematica-mcp-server:7999
+    - archivematica-ccp:7999
     - archivematica-dashboard:8000
     - archivematica-storage-service:8000
