--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@
 #
 agentarchives==0.9.0
     # via -r requirements.in
-amclient==1.3.0
-    # via -r requirements.in
 ammcpc==0.2.0
     # via -r requirements.in
 asgiref==3.8.1
@@ -61,7 +59,6 @@ requests==2.32.3
     # via
     #   -r requirements.in
     #   agentarchives
-    #   amclient
     #   opf-fido
 six==1.16.0
     # via
@@ -74,9 +71,7 @@ typing-extensions==4.12.2
 unidecode==1.3.8
     # via -r requirements.in
 urllib3==2.2.2
-    # via
-    #   amclient
-    #   requests
+    # via requests
 zipp==3.19.2
     # via
     #   importlib-metadata
