Clean up worker configs

--- a/src/MCPClient/install/clientConfig.conf
+++ b/src/MCPClient/install/clientConfig.conf
@@ -1,25 +1,22 @@
 [MCPClient]
-MCPArchivematicaServer = localhost:4730
-sharedDirectoryMounted = /var/archivematica/sharedDirectory/
-watchDirectoryPath = /var/archivematica/sharedDirectory/watchedDirectories/
-processingDirectory = /var/archivematica/sharedDirectory/currentlyProcessing/
-rejectedDirectory = /var/archivematica/sharedDirectory/rejected/
+gearman_server = localhost:4730
+shared_dir = /var/archivematica/sharedDirectory/
 archivematicaClientModules = /usr/lib/archivematica/MCPClient/archivematicaClientModules
 clientScriptsDirectory = /usr/lib/archivematica/MCPClient/clientScripts/
 clientAssetsDirectory = /usr/lib/archivematica/MCPClient/assets/
-temp_dir = /var/archivematica/sharedDirectory/tmp
 removableFiles = Thumbs.db, Icon, Icon\r, .DS_Store
-clamav_server = /var/run/clamav/clamd.ctl
-clamav_pass_by_stream = True
-clamav_client_timeout = 86400
-clamav_client_backend =  clamdscanner ; available are clamscanner (via CLI) and clamdscanner
-clamav_max_file_size = 2000 ; Unit: MB
-clamav_max_scan_size = 2000 ; Unit: MB
-clamav_max_stream_length = 2000 ; Unit: MB
 agentarchives_client_timeout = 300
 
+[clamav]
+server = /var/run/clamav/clamd.ctl
+pass_by_stream = True
+client_timeout = 86400
+client_backend =  clamdscanner ; available are clamscanner (via CLI) and clamdscanner
+max_file_size = 2000 ; Unit: MB
+max_scan_size = 2000 ; Unit: MB
+max_stream_length = 2000 ; Unit: MB
 
-[client]
+[db]
 user = archivematica
 password = demo
 host = localhost
