--- a/src/MCPClient/install/clientConfig.conf
+++ b/src/MCPClient/install/clientConfig.conf
@@ -1,9 +1,9 @@
 [MCPClient]
 gearman_server = localhost:4730
 shared_dir = /var/archivematica/sharedDirectory/
-archivematicaClientModules = /usr/lib/archivematica/MCPClient/archivematicaClientModules
-clientScriptsDirectory = /usr/lib/archivematica/MCPClient/clientScripts/
-clientAssetsDirectory = /usr/lib/archivematica/MCPClient/assets/
+workers =
+max_tasks_per_child = 10
+capture_client_script_output = true
 removableFiles = Thumbs.db, Icon, Icon\r, .DS_Store
 agentarchives_client_timeout = 300
 
