--- a/hack/docker-compose.tests.yml
+++ b/hack/docker-compose.tests.yml
@@ -6,10 +6,10 @@ services:
     build:
       context: "../"
       dockerfile: "hack/Dockerfile"
+      target: "archivematica-tests"
       args:
-        TARGET: "archivematica-tests"
         UBUNTU_VERSION: ${UBUNTU_VERSION:-22.04}
-        PYTHON_VERSION: ${PYTHON_VERSION:-3.9}
+        PYTHON_VERSION: ${PYTHON_VERSION:-3.12.4}
     volumes:
       - "../:/src"
     links:
