--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,6 @@ gearman3 @ git+https://github.com/artefactual-labs/python-gearman.git@b68efc868c
     # via -r requirements.in
 idna==3.7
     # via requests
-importlib-metadata==8.0.0
-    # via -r requirements.in
 importlib-resources==6.4.0
     # via opf-fido
 lxml==5.2.2
@@ -50,9 +48,7 @@ orjson==3.10.6
 prometheus-client==0.20.0
     # via -r requirements.in
 python-dateutil==2.9.0.post0
-    # via
-    #   -r requirements.in
-    #   django-tastypie
+    # via django-tastypie
 python-mimeparse==1.6.0
     # via django-tastypie
 requests==2.32.3
@@ -70,5 +66,3 @@ unidecode==1.3.8
     # via -r requirements.in
 urllib3==2.2.2
     # via requests
-zipp==3.19.2
-    # via importlib-metadata
