--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -124,6 +124,7 @@ jobs:
           input: image
           format: sarif
           output: trivy-results.sarif
+          timeout: 20m0s
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@eb055d739abdc2e8de2e5f4ba1a8b246daa779aa # v3.26.0
