--- a/base/mysql/secret.yaml
+++ b/base/mysql/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   creationTimestamp: null
-  name: mysql
+  name: ccp-mysql
 type: Opaque
 data:
   # Default password is "admin".
